--- a/index.html
+++ b/index.html
@@ -1,13 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
+    <script src="https://kit.fontawesome.com/430414932c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responciv.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div class="container nav-container">
+                <div class="nav-logo">
+                    <img src="/images/Frame.png" alt="">
+                    <h3><span>G</span>amer</h3>
+                </div>
+                <div class="nav-manue">
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Developers</a></li>
+                    <ul>
+                        <li>Follow Us On</li>
+                        <li><a class="youtube" href="#"><i class="fa-brands fa-youtube"></i></a></li>
+                        <li><a href="#"><i class="fa-brands fa-tiktok"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
