--- a/index.html
+++ b/index.html
@@ -30,6 +30,25 @@
             </div>
         </nav>
     </header>
+    <section class="banner container">
+        <div class="banner-left">
+            <h3>Play Like The</h3>
+            <h1>G.O.A.T.</h1>
+            <ul>
+                <li><img src="/icon/Frame.svg" alt=""> 1-Click instant play</li>
+                <li><img src="/icon/Frame (1).svg" alt=""> No Download</li>
+                <li><img src="/icon/Frame (2).svg" alt=""> 1000s of supported online games</li>
+            </ul>
+            <button class="button-1 comon-button">Sign In</button>
+            <button class="button-2 comon-button">Go Rogue</button>
+
+
+        </div>
+        <div class="banner-right">
+            <img src="images/Group 18.png" alt="">
+        </div>
+
+    </section>
 </body>
 
 </html>
