banner-2 section conplite with responsive

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             </div>
         </nav>
     </header>
+    <!-- banner-1 -->
     <section class="banner container">
         <div class="banner-left">
             <h3>Play Like The</h3>
@@ -46,6 +47,24 @@
         </div>
         <div class="banner-right">
             <img src="images/Group 18.png" alt="">
+        </div>
+
+    </section>
+
+    <!-- banner-2 -->
+    <section class="banner-2 container">
+        <div class="banner2-right">
+            <h1>We are gamer</h1>
+            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+          
+            <button class="button-1 comon-button">know more</button>
+            <h5> <span>Our purpose... <br></span>  “unleash the gamer in everyone”</h5>
+            
+
+
+        </div>
+        <div class="banner-2eft">
+            <img src="images/pngwing 4.png" alt="">
         </div>
 
     </section>
