online game section fenish

--- a/index.html
+++ b/index.html
@@ -55,11 +55,12 @@
     <section class="banner-2 container">
         <div class="banner2-right">
             <h1>We are gamer</h1>
-            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
-          
+            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer
+                mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+
             <button class="button-1 comon-button">know more</button>
-            <h5> <span>Our purpose... <br></span>  “unleash the gamer in everyone”</h5>
-            
+            <h5> <span>Our purpose... <br></span> “unleash the gamer in everyone”</h5>
+
 
 
         </div>
@@ -67,6 +68,34 @@
             <img src="images/pngwing 4.png" alt="">
         </div>
 
+    </section>
+
+    <!-- online game section -->
+    <section class="online-game container">
+        <h1>Online Games <span> Funny Videos</span></h1>
+        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+        <div class="game-container">
+            <div class="games-1">
+                <div class="gam-cart">
+                    <img src="/images/Rectangle 4.png" alt="">
+                    <h3>No Download. No Installs. Play games Instantly on Gamer.</h3>
+                </div>
+                <div class="gam-cart">
+                    <img src="/images/Rectangle 5.png" alt="">
+                    <h3>Did you score? #unblockedgames #school</h3>
+                </div>
+            </div>
+            <div class="games-2">
+                <div class="gam-cart">
+                    <img src="/images/Rectangle 7.png" alt="">
+                    <h3>Breaking game records like OG</h3>
+                </div>
+                <div class="gam-cart">
+                    <img src="/images/Rectangle 6.png" alt="">
+                    <h3>Busted gaming on school laptop, but you are still lit.</h3>
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
