Play section fenish with responsive

--- a/index.html
+++ b/index.html
@@ -97,6 +97,30 @@
             </div>
         </div>
     </section>
+
+    <section class="play-section-1 container">
+        <div class="play-section-content">
+            <h1><span>Play Instantly,</span> <br> No Downloads <br> No Installs.</h1>
+            <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly
+                in your browser.</p>
+        </div>
+        <div class="play-section-img">
+            <img class="img-1" src="/images/Rectangle 55.png" alt="">
+            <img class="img-2" src="/images/Rectangle 66.png" alt="">
+        </div>
+    </section>
+</body>
+<section class="play-section-2 container">
+    <div class="play-section-img-2">
+        <img class="img-3" src="/images/Rectangle 67.png" alt="">
+        <img class="img-4" src="/images/Rectangle 78.png" alt="">
+    </div>
+    <div class="play-section-content-2">
+        <h1><span>Play Games Online</span> Anywhere, Anytime!</h1>
+        <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
+    </div>
+   
+</section>
 </body>
 
 </html>
