--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
         </nav>
     </header>
     <!-- banner-1 -->
-    <section class="banner container">
+    <section class="banner container">.
         <div class="banner-left">
             <h3>Play Like The</h3>
             <h1>G.O.A.T.</h1>
             <ul>
-                <li><img src="/icon/Frame.svg" alt=""> 1-Click instant play</li>
-                <li><img src="/icon/Frame (1).svg" alt=""> No Download</li>
-                <li><img src="/icon/Frame (2).svg" alt=""> 1000s of supported online games</li>
+                <li><img src="icon/Frame.svg" alt=""> 1-Click instant play</li>
+                <li><img src="icon/Frame (1).svg" alt=""> No Download</li>
+                <li><img src="icon/Frame (2).svg" alt=""> 1000s of supported online games</li>
             </ul>
             <button class="button-1 comon-button">Sign In</button>
             <button class="button-2 comon-button">Go Rogue</button>
@@ -77,21 +77,21 @@
         <div class="game-container">
             <div class="games-1">
                 <div class="gam-cart">
-                    <img src="/images/Rectangle 4.png" alt="">
+                    <img src="images/Rectangle 4.png" alt="">
                     <h3>No Download. No Installs. Play games Instantly on Gamer.</h3>
                 </div>
                 <div class="gam-cart">
-                    <img src="/images/Rectangle 5.png" alt="">
+                    <img src="images/Rectangle 5.png" alt="">
                     <h3>Did you score? #unblockedgames #school</h3>
                 </div>
             </div>
             <div class="games-2">
                 <div class="gam-cart">
-                    <img src="/images/Rectangle 7.png" alt="">
+                    <img src="images/Rectangle 7.png" alt="">
                     <h3>Breaking game records like OG</h3>
                 </div>
                 <div class="gam-cart">
-                    <img src="/images/Rectangle 6.png" alt="">
+                    <img src="images/Rectangle 6.png" alt="">
                     <h3>Busted gaming on school laptop, but you are still lit.</h3>
                 </div>
             </div>
@@ -105,22 +105,24 @@
                 in your browser.</p>
         </div>
         <div class="play-section-img">
-            <img class="img-1" src="/images/Rectangle 55.png" alt="">
-            <img class="img-2" src="/images/Rectangle 66.png" alt="">
+            <img class="img-1" src="./images/Rectangle 55.png" alt="">
+            <img class="img-2" src="./images/Rectangle 66.png" alt="">
         </div>
     </section>
-</body>
-<section class="play-section-2 container">
-    <div class="play-section-img-2">
-        <img class="img-3" src="/images/Rectangle 67.png" alt="">
-        <img class="img-4" src="/images/Rectangle 78.png" alt="">
-    </div>
-    <div class="play-section-content-2">
-        <h1><span>Play Games Online</span> Anywhere, Anytime!</h1>
-        <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device.</p>
-    </div>
-   
-</section>
+
+
+    <section class="play-section-2 container">
+        <div class="play-section-img-2">
+            <img class="img-3" src="./images/Rectangle 67.png" alt="">
+            <img class="img-4" src="./images/Rectangle 78.png" alt="">
+        </div>
+        <div class="play-section-content-2">
+            <h1><span>Play Games Online</span> Anywhere, Anytime!</h1>
+            <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for
+                free, any time, anywhere , on any device.</p>
+        </div>
+
+    </section>
 </body>
 
 </html>
