career section fenish with 100% responcive

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav>
             <div class="container nav-container">
                 <div class="nav-logo">
-                    <img src="/images/Frame.png" alt="">
+                    <img src="images/Frame.png" alt="">
                     <h3><span>G</span>amer</h3>
                 </div>
                 <div class="nav-manue">
@@ -31,97 +31,133 @@
         </nav>
     </header>
     <!-- banner-1 -->
-    <section class="banner container">.
-        <div class="banner-left">
-            <h3>Play Like The</h3>
-            <h1>G.O.A.T.</h1>
-            <ul>
-                <li><img src="icon/Frame.svg" alt=""> 1-Click instant play</li>
-                <li><img src="icon/Frame (1).svg" alt=""> No Download</li>
-                <li><img src="icon/Frame (2).svg" alt=""> 1000s of supported online games</li>
-            </ul>
-            <button class="button-1 comon-button">Sign In</button>
-            <button class="button-2 comon-button">Go Rogue</button>
+    <section class="container">
+        <div class="banner">
+            <div class="banner-left">
+                <h3>Play Like The</h3>
+                <h1>G.O.A.T.</h1>
+                <ul>
+                    <li><img src="icon/Frame.svg" alt=""> 1-Click instant play</li>
+                    <li><img src="icon/Frame (1).svg" alt=""> No Download</li>
+                    <li><img src="icon/Frame (2).svg" alt=""> 1000s of supported online games</li>
+                </ul>
+                <button class="button-1 comon-button"><a href="#">Sign In</a></button>
+                <button class="button-2 comon-button"><a href="#">Go Rogue</a></button>
 
 
-        </div>
-        <div class="banner-right">
-            <img src="images/Group 18.png" alt="">
+            </div>
+            <div class="banner-right">
+                <img src="images/Group 18.png" alt="">
+            </div>
         </div>
 
     </section>
 
     <!-- banner-2 -->
-    <section class="banner-2 container">
-        <div class="banner2-right">
-            <h1>We are gamer</h1>
-            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer
-                mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+    <section class="container">
+        <div class="banner-2">
+            <div class="banner2-right">
+                <h1>We are gamer</h1>
+                <p>An international digital games and entertainment company. We develop, publish and distribute
+                    multiplayer
+                    mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
 
-            <button class="button-1 comon-button">know more</button>
-            <h5> <span>Our purpose... <br></span> “unleash the gamer in everyone”</h5>
+                <button class="button-1 comon-button"><a href="#">know more</a></button>
+                <h5> <span>Our purpose... <br></span> “unleash the gamer in everyone”</h5>
 
 
 
-        </div>
-        <div class="banner-2eft">
-            <img src="images/pngwing 4.png" alt="">
+            </div>
+            <div class="banner-2eft">
+                <img src="images/pngwing 4.png" alt="">
+            </div>
         </div>
 
     </section>
 
     <!-- online game section -->
-    <section class="online-game container">
-        <h1>Online Games <span> Funny Videos</span></h1>
-        <p>A Collection of Hilarious Videos to Brighten Your Day</p>
-        <div class="game-container">
-            <div class="games-1">
-                <div class="gam-cart">
-                    <img src="images/Rectangle 4.png" alt="">
-                    <h3>No Download. No Installs. Play games Instantly on Gamer.</h3>
+    <section class=" container">
+        <div class="online-game">
+            <h1>Online Games <span> Funny Videos</span></h1>
+            <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            <div class="game-container">
+                <div class="games-1">
+                    <div class="gam-cart">
+                        <img src="images/Rectangle 4.png" alt="">
+                        <h3>No Download. No Installs. Play games Instantly on Gamer.</h3>
+                    </div>
+                    <div class="gam-cart">
+                        <img src="images/Rectangle 5.png" alt="">
+                        <h3>Did you score? #unblockedgames #school</h3>
+                    </div>
                 </div>
-                <div class="gam-cart">
-                    <img src="images/Rectangle 5.png" alt="">
-                    <h3>Did you score? #unblockedgames #school</h3>
-                </div>
-            </div>
-            <div class="games-2">
-                <div class="gam-cart">
-                    <img src="images/Rectangle 7.png" alt="">
-                    <h3>Breaking game records like OG</h3>
-                </div>
-                <div class="gam-cart">
-                    <img src="images/Rectangle 6.png" alt="">
-                    <h3>Busted gaming on school laptop, but you are still lit.</h3>
+                <div class="games-2">
+                    <div class="gam-cart">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <h3>Breaking game records like OG</h3>
+                    </div>
+                    <div class="gam-cart">
+                        <img src="images/Rectangle 6.png" alt="">
+                        <h3>Busted gaming on school laptop, but you are still lit.</h3>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="play-section-1 container">
-        <div class="play-section-content">
-            <h1><span>Play Instantly,</span> <br> No Downloads <br> No Installs.</h1>
-            <p>Play games online for free without <br> downloading. Just click the Play button <br> and play instantly
-                in your browser.</p>
-        </div>
-        <div class="play-section-img">
-            <img class="img-1" src="./images/Rectangle 55.png" alt="">
-            <img class="img-2" src="./images/Rectangle 66.png" alt="">
+    <section class=" container">
+        <div class="play-section-1">
+            <div class="play-section-content">
+                <h1><span>Play Instantly,</span> <br> No Downloads <br> No Installs.</h1>
+                <p>Play games online for free without <br> downloading. Just click the Play button <br> and play
+                    instantly
+                    in your browser.</p>
+            </div>
+            <div class="play-section-img">
+                <img class="img-1" src="images/Rectangle 55.png" alt="">
+                <img class="img-2" src="images/Rectangle 66.png" alt="">
+            </div>
         </div>
     </section>
 
 
-    <section class="play-section-2 container">
-        <div class="play-section-img-2">
-            <img class="img-3" src="./images/Rectangle 67.png" alt="">
-            <img class="img-4" src="./images/Rectangle 78.png" alt="">
-        </div>
-        <div class="play-section-content-2">
-            <h1><span>Play Games Online</span> Anywhere, Anytime!</h1>
-            <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for
-                free, any time, anywhere , on any device.</p>
+    <section class=" container">
+        <div class="play-section-2">
+            <div class="play-section-img-2">
+                <img class="img-3" src="images/Rectangle 67.png" alt="">
+                <img class="img-4" src="images/Rectangle 78.png" alt="">
+            </div>
+            <div class="play-section-content-2">
+                <h1><span>Play Games Online</span> Anywhere, Anytime!</h1>
+                <p>PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online
+                    for
+                    free, any time, anywhere , on any device.</p>
+            </div>
         </div>
 
+    </section>
+
+    <section class="career-section">
+        <div class="container">
+            <div class="career-section-container">
+                <div class="career-content">
+                    <h1>Careers</h1>
+                    <p>Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                    <div class="inner-container">
+                        <div class="inner-left">
+                            <h4>Multimedia Artist + <br> Data Engineer + <br> Adroid Engineer + <br> Server Developer + <br> Group Financial Accountant + <br> Senior User Acuisition Specialist +</h4>
+                        </div>
+                        <div class="inner-right">
+                            <h4>Lisbon, Portugal <br> Lisbon, Portugal <br> Zoetermeer,  Netherlands <br>Lisbon, Portugal <br> London, United Kingdom <br> Lisbon, Portugal</h4>
+                        </div>
+                    </div>
+                    <button  class="comon-button"><a href="#">See all positions</a></button>
+                </div>
+                <div class="career-img">
+                    <img src="images/Group 65.png" alt="">
+                </div>
+            </div>
+        </div>
     </section>
 </body>
 
