footer section complit

--- a/index.html
+++ b/index.html
@@ -142,16 +142,21 @@
             <div class="career-section-container">
                 <div class="career-content">
                     <h1>Careers</h1>
-                    <p>Gamer is driven to create the best and most fun games for our millions of players all around the world, and we,re always on the lookout for more top talent to join our growing team. If you,d like to help us make great games and be a part of Gamers bright future, we,d love to hear from you.</p>
+                    <p>Gamer is driven to create the best and most fun games for our millions of players all around the
+                        world, and we,re always on the lookout for more top talent to join our growing team. If you,d
+                        like to help us make great games and be a part of Gamers bright future, we,d love to hear from
+                        you.</p>
                     <div class="inner-container">
                         <div class="inner-left">
-                            <h4>Multimedia Artist + <br> Data Engineer + <br> Adroid Engineer + <br> Server Developer + <br> Group Financial Accountant + <br> Senior User Acuisition Specialist +</h4>
+                            <h4>Multimedia Artist + <br> Data Engineer + <br> Adroid Engineer + <br> Server Developer +
+                                <br> Group Financial Accountant + <br> Senior User Acuisition Specialist +</h4>
                         </div>
                         <div class="inner-right">
-                            <h4>Lisbon, Portugal <br> Lisbon, Portugal <br> Zoetermeer,  Netherlands <br>Lisbon, Portugal <br> London, United Kingdom <br> Lisbon, Portugal</h4>
+                            <h4>Lisbon, Portugal <br> Lisbon, Portugal <br> Zoetermeer, Netherlands <br>Lisbon, Portugal
+                                <br> London, United Kingdom <br> Lisbon, Portugal</h4>
                         </div>
                     </div>
-                    <button  class="comon-button"><a href="#">See all positions</a></button>
+                    <button class="comon-button"><a href="#">See all positions</a></button>
                 </div>
                 <div class="career-img">
                     <img src="images/Group 65.png" alt="">
@@ -200,6 +205,40 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <div class="container">
+            <div class="footer-logo">
+                <img src="images/Frame.png" alt="">
+                <h3><span>G</span>amer</h3>
+            </div>
+            <div class="footer-manue-1">
+                
+                    <li><a href="#">Our Story</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">Web Games</a></li>
+                    <li><a href="#">Careers</a></li>
+                    <li><a href="#">Support</a></li>
+                    <li><a href="#">My Account</a></li>
+                
+            </div>
+            <div class="social-icon">
+                <li><img src="social-icon/twitter 1.svg" alt=""></li>
+                <li><img src="social-icon/facebook 1.svg" alt=""></li>
+                <li><img src="social-icon/Group 49.svg" alt=""></li>
+                <li><img src="social-icon/linkedin 1.svg" alt=""></li>
+                <li><img src="social-icon/instagram 1.svg" alt=""></li>
+                <li><img src="social-icon/apple 1.svg" alt=""></li>
+            </div>
+            <div class="footer-manue-2">
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">Terms and Conditions</a></li>
+                <li><a href="#">Cookie Policy</a></li>
+                <li><a href="#">Privacy Settings</a></li>
+            </div>
+            <p class="copyright-text">Play Games @ Gamer @ 2000-2023 Gamer Bangladesh</p>
+        </div>
+    </footer>
 </body>
 
 </html>
