some info update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>GAMER ZONE</title>
+    <link rel="icon" type="image/x-icon" href="images/Frame.png">
     <script src="https://kit.fontawesome.com/430414932c.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responciv.css">
@@ -83,21 +84,46 @@
             <div class="game-container">
                 <div class="games-1">
                     <div class="gam-cart">
-                        <img src="images/Rectangle 4.png" alt="">
+                        <div class="hover-overlay">
+                            <img src="images/Rectangle 4.png" alt="">
+                            <div class="overlay">
+                                <img src="icon/play-button 1.svg" alt="">
+                                <p>watch Now</p>
+                            </div>
+                        </div>
+                        
                         <h3>No Download. No Installs. Play games Instantly on Gamer.</h3>
                     </div>
                     <div class="gam-cart">
-                        <img src="images/Rectangle 5.png" alt="">
+                        <div class="hover-overlay">
+                            <img src="images/Rectangle 5.png" alt="">
+                            <div class="overlay">
+                                <img src="icon/play-button 1.svg" alt="">
+                                <p>watch Now</p>
+                            </div>
+                        </div>
                         <h3>Did you score? #unblockedgames #school</h3>
                     </div>
                 </div>
                 <div class="games-2">
                     <div class="gam-cart">
-                        <img src="images/Rectangle 7.png" alt="">
+                        <div class="hover-overlay">
+                            <img src="images/Rectangle 7.png" alt="">
+                            <div class="overlay">
+                                <img src="icon/play-button 1.svg" alt="">
+                                <p>watch Now</p>
+                            </div>
+                        </div>
                         <h3>Breaking game records like OG</h3>
                     </div>
                     <div class="gam-cart">
-                        <img src="images/Rectangle 6.png" alt="">
+                        <div class="hover-overlay">
+                            <img src="images/Rectangle 6.png" alt="">
+                            <div class="overlay">
+                                <img src="icon/play-button 1.svg" alt="">
+                                <p>watch Now</p>
+                            </div>
+                        </div>
                         <h3>Busted gaming on school laptop, but you are still lit.</h3>
                     </div>
                 </div>
